Fix HW06 Optional 2